Sec16_Chap166-X: code optimizations